Estrutura do auth

--- a/pom.xml
+++ b/pom.xml
@@ -30,18 +30,14 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+		<!--	DEPENDÊNCIA DO JDBC:	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+
+		<!--	DEPENDÊNCIAS DO FLYWAY:  	-->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
@@ -51,27 +47,62 @@
 			<artifactId>flyway-database-postgresql</artifactId>
 		</dependency>
 
+		<!--	DEPENDÊNCIA DO POSTGRES	-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!--	DEPENDÊNCIA DO SPRING SECURITY: 	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<!-- Dependência para JWT (JSON Web Token) -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+
+		<!--	DEPENDÊNCIA DO SPRING BOOT STARTER WEB: 	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<!--	DEPENDÊNCIA DO SPRING BOOT DEV TOLLS:	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+
+		<!--	DEPENDÊNCIA DO LOMBOK:	-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<!--	DEPENDÊNCIA DO DOTENV:	-->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
+		<!--	DEPENDÊNCIA DO SPRING BOOT STARTER PARA TESTES: 	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!--	DEPENDÊNCIA DO SPRING BOOT SECURITY PARA TESTES:	-->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
@@ -107,5 +138,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
