--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -16,6 +16,11 @@
       "description": "armazenamento do acesso ao bucket aws."
     },
     {
+      "name": "token.x-api-key",
+      "type": "java.lang.String",
+      "description": "Description for token.x-api-key."
+    },
+    {
       "name": "aws.bucket-name",
       "type": "java.lang.String",
       "description": "armazenamento do acesso ao bucket aws."
