--- a/pom.xml
+++ b/pom.xml
@@ -88,11 +88,17 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!--	DEPENDÊNCIA DO DOTENV:	-->
+		<!--	DEPENDÊNCIAS DO DOTENV:	-->
 		<dependency>
 			<groupId>io.github.cdimascio</groupId>
 			<artifactId>dotenv-java</artifactId>
 			<version>2.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>java-dotenv</artifactId>
+			<version>5.2.2</version>
 		</dependency>
 
 		<!--	DEPENDÊNCIA DO SPRING BOOT STARTER PARA TESTES: 	-->
