--- a/src/main/resources/docker/docker-compose.yml
+++ b/src/main/resources/docker/docker-compose.yml
@@ -25,23 +25,23 @@ services:
       - '8081:80'
     depends_on:
       - database
-  #  # Aplicação (API)
-  #  app:
-  #    container_name: app
-  #    build: ../../../..
-  #    ports:
-  #      - '${API_PORT}:${API_PORT}'
-  #    environment:
-  #      NODE_ENV: ${NODE_ENV}
-  #      API_HOST: ${API_HOST}
-  #      API_PORT: ${API_PORT}
-  #      DB_TYPE: ${DB_TYPE}
-  #      DB_HOST: database
-  #      DB_USERNAME: ${DB_USERNAME}
-  #      DB_PASSWORD: ${DB_PASSWORD}
-  #      DB_NAME: ${DB_NAME}
-  #      DB_PORT: ${DB_PORT}
-  #    depends_on:
-  #      - database
+    # Aplicação (API)
+  backend:
+    image: gersin/qualiai:1.0.0
+    ports:
+      - '${API_PORT}:${API_PORT}'
+    environment:
+      NODE_ENV: ${NODE_ENV}
+      API_HOST: ${API_HOST}
+      API_PORT: ${API_PORT}
+      DB_TYPE: ${DB_TYPE}
+      DB_HOST: ${DB_HOST}
+      DB_URL: ${DB_URL}
+      DB_NAME: ${DB_NAME}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PORT: ${DB_PORT}
+    depends_on:
+      - database
 volumes:
   pgdata: {}
